argocd/api-rs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-rs
  labels:
    istio-injection: enabled
  annotations:
    cnrm.cloud.google.com/project-id: test-project-0801
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rs-deploy
  namespace: api-rs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rs-pod
  template:
    metadata:
      labels:
        app: api-rs-pod
    spec:
      serviceAccountName: api-rs-sa
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: api-rs-svc
  namespace: api-rs
spec:
  ports:
  - name: http
    port: 80 
  type: ClusterIP
  selector:
    app: api-rs-pod
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-rs-vs
  namespace: api-rs
spec:
  hosts:
  - "api.test.memotoro.com"
  gateways:
  - istio-system/public-gateway
  http:
  - match:
    - uri:
        prefix: /api-rs/
    - uri:
        exact: /api-rs
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: api-rs-svc
    corsPolicy:
      allowOrigins:
      - exact: "*"
      allowHeaders:
      - authorization
      - content-type
      allowMethods:
      - GET
      - HEAD
      - OPTIONS
